# Catfish

./: ## Перевірені конфігурації.md  LAUNCH.md  Screencast from 06-20-2026 11:54:01 AM.webm  Screencast from 06-20-2026 11:55:25 AM.webm  documentation.txt  genera_hackathon_work_plan.md  walkthrough.md
Mission/: mission_launch.py
falcon_gaze-release/: README.md  run_all.sh
falcon_gaze-release/drone_sdk/: bridges.py  camera.py  drone.py  ros_node.py
falcon_gaze-release/examples/: capture_frame.py  follower_mission.py
falcon_gaze-release/resources/plugins/led_controller/: CMakeLists.txt
falcon_gaze-release/resources/scripts/: mission_launch.py  px4_gz_setup.sh  swarn_launch.py
falcon_gaze-release/resources/worlds/: baylands_custom.config  baylands_custom.sdf
falcon_gaze-release/resources/x500_mono_cam/: model.sdf
falcon_gaze-release/scratch/: analyze_color.py  analyze_edges.py  analyze_led_core.py  calibrate_stagger.py  check_dist.py  check_heights.py  listen_udp.py  monitor_formation.py  monitor_telemetry.py  test_bridge.py  test_sub.py
falcon_gaze-release/tests/: test_follower_logic.py
test/: run_logged_test.sh
test/logs/: flight_20260620_114242.json
